<resources>
    <string name="app_name">Chore Tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_or_up">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Log in</string>
    <string name="onboarding_secondary_text">Welcome to Chore Tracker</string>
    <string name="onboarding_main_text1">Set goals &amp; enjoy earned rewards</string>
    <string name="onboarding_main_text2">Learn to prioritize your time</string>
    <string name="onboarding_main_text3">Take responsibility &amp; be a team player</string>
    <string name="login_main_text">Login</string>
    <string name="login_secondary_text">Enter the login and password you use to sign in to Chore Tracker</string>
    <string name="login_text_field_hint">Login</string>
    <string name="password_text_field_hint">Password</string>
    <string name="login_help_text">Forgot your password? <b><a href="">Click for a reset link.</a></b></string>
    <string name="sign_up_main_text">New account</string>
    <string name="sign_up_secondary_text1">Enter the email address you will use to recover access to your Chore Tracker account. You can change it later.</string>
    <string name="sign_up_secondary_text2">Fill in the details for your new account. This account will automatically be granted an admin role.</string>
    <string name="sign_up_help_text1">Already have an account? <b><a href="">Log in here</a></b>.</string>
    <string name="sign_up_help_text2">If continue, you accept our <b><a href="">Terms &amp; Conditions</a></b> and <b><a href="">Privacy Policy</a>.</b></string>
    <string name="email_text_field_hint">Email address</string>
    <string name="username_text_field_hint">Your name</string>
    <string name="password_confirm_text_field_hint">Confirm password</string>
    <string name="action_continue">Continue</string>
</resources>