<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardingSecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_secondary_text"
        android:textSize="@dimen/login_small_text"
        app:layout_constraintBottom_toTopOf="@+id/onboardingMainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextSwitcher
        android:id="@+id/onboardingMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_out_right"
        android:outAnimation="@android:anim/slide_in_left"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingSecondaryText">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_main_text1"
            android:textColor="@color/black"
            android:textSize="@dimen/login_large_text"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/login_large_text"
            android:textStyle="bold" />

    </TextSwitcher>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingMainText"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:tabGravity="center"
        app:tabIndicator="@android:color/transparent"
        app:tabMode="fixed"
        app:tabRippleColor="@android:color/transparent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/dot_indicator" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/dot_indicator" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/dot_indicator" />

    </com.google.android.material.tabs.TabLayout>

    <!--
    TODO https://www.google.com/search?q=android+Image+Slider+with+Dot+Indicators&bih=927&biw=1278&hl=en-US&ei=cl39YqmKAo3ekwXuhpigBQ&ved=0ahUKEwipi_XY6M75AhUN76QKHW4DBlQQ4dUDCA4&uact=5&oq=android+Image+Slider+with+Dot+Indicators&gs_lcp=Cgdnd3Mtd2l6EAMyCAghEB4QFhAdMggIIRAeEBYQHTIICCEQHhAWEB06BwgAEEcQsANKBAhBGABKBAhGGABQmQFYmQFgvAloAXAAeACAAaABiAGgAZIBAzAuMZgBAKABAqABAcgBCMABAQ&sclient=gws-wiz
    TODO https://startandroid.ru/ru/uroki/vse-uroki-spiskom/491-urok-182-constraintlayout-chain-weight-barrier-group.html
      -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_sign_up"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/medium_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/medium_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>